--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10 - API Cat</title>
-    <link rel="stylesheet" href="./css/index.css" />
-    <script src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/index.js" type="module"></script>
   </head>
   <body>
     <div class="container">
       <select id="single" class="breed-select unvisible"></select>
-      <p class="loader unvisible"></p>
+      <p class="loader unvisible">Loading data, please wait...</p>
       <p class="error unvisible">
         Oops! Something went wrong! Try reloading the page!
       </p>
